# OneTaskCore

./: .clang-format  CMakeLists.txt
demo/: test1.cpp
include/OneTaskCore/: OneTaskCore.h
include/OneTaskCore/monitor/: monitor.h
include/OneTaskCore/scheduler/: scheduler.h
include/OneTaskCore/task/: task.h
include/OneTaskCore/threadpool/: thread_pool.h
src/monitor/: monitor.cpp
src/scheduler/: scheduler.cpp
src/threadpool/: thread_pool.cpp
